--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hi</h1>
-</body>
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, rem
+        dicta dolore labore temporibus in nam sed doloremque reprehenderit
+        excepturi harum, voluptatum odio et aliquam dignissimos voluptas quidem.
+        Labore, veniam.
+      </p>
+    </div>
+  </body>
 </html>
